# ConnectFourSDL2

./: .gitignore  CMakeLists.txt  Makefile  README.md  vcpkg.json
.github/workflows/: build.yml
include/: AI.h  Assets.h  Game.h  Input.h  Settings.h
src/: AI.c  Assets.c  Common.c  Game.c  Input.c  main.c
